--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,3 +1,4 @@
+
 version: 0.2
 
 phases:
@@ -5,11 +6,11 @@ phases:
     commands:
       - echo Installing Node 12...
       - curl -sL https://deb.nodesource.com/setup_12.x | bash -
-      - sudo install -y nodejs
+      - apt install -y nodejs
       - echo Installing Yarn...
-      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo-key add -
+      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-      - sudo install --no-install-recommends yarn
+      - apt install --no-install-recommends yarn
   pre_build:
     commands:
       - echo Installing dependencies...
